# fresco

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  package.json  requirements.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_compression.cpp  benchmark_decoding.cpp  benchmark_encoding.cpp  benchmark_main.cpp
bindings/python/: setup.py
bindings/python/fresco/: __init__.py  encoder.py
cmake/: frescoConfig.cmake.in
docs/: api.md  contributing.md  specification.md
examples/: basic_usage.py
include/: CMakeLists.txt
include/fresco/: fresco.h
src/: CMakeLists.txt
src/codecs/: 3d_codec.cpp  lossless_codec.cpp  lossy_codec.cpp  vector_codec.cpp
src/core/: compression.cpp  compression.h  container.cpp  container.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_basic.cpp
tools/: CMakeLists.txt  fresco-cli.cpp
